fix(test-run): seed run-to-here with the RAW parsed rows; a FAILED batch answers 422
TESTRUN-SEED-IS-MAPPED-OUTPUT-1 (operator decision 2026-09-23: seed with the raw
parsed rows). The preview was seeded with the rows the ingest WROTE - already
mapped - so the walk re-applied every mapping: in_recharges (AMOUNT_MINOR) and
msc_cdr (EVENT_TIME) refused 422, premed_events showed every EVENT_TS NULL.
DataTransformer.RAW_INPUT (a ScopedValue observer checked in materialize, the one
point all ingest lanes funnel through) lets PipelineTestRun capture the raw
relation per segment into Result.rawRows(); the route seeds from that.
sampleRowsBySegment (its only caller gone) is removed.

TESTRUN-FAILED-BATCH-REPORTED-EMPTY-1: a FAILED Result now answers 422 "the batch
FAILED after N row(s) parsed: <error>" instead of 200 "no rows were parsed";
RunToHereDialog renders it (spec pins the alert).

Tests: ControlApiPipelineTestRunDemoTest (3, real HTTP on the shipped demos vs a
real ingest), ControlApiPipelineTestRunTest +1, run-to-here.dialog.spec +1.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>